--- a/Tutorial-04 AngularJS/AngularJS-2-1_Basics.html
+++ b/Tutorial-04 AngularJS/AngularJS-2-1_Basics.html
@@ -7,11 +7,9 @@ if the ngApp directive were not placed on the html element then the document wou
 <html ng-app>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>AngularJS-1</title>
+    <title>AngularJS-2.1 Basics Demo</title>
     <!-- Load AugularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <!-- Load JQuery -->
-    <script type="text/javascript" src="application/start.js"></script>
 </head>
 <body>
     <div>
