--- a/Tutorial-04 AngularJS/AngularJS-2-2_Controller.html
+++ b/Tutorial-04 AngularJS/AngularJS-2-2_Controller.html
@@ -6,7 +6,7 @@
  -->
 <html ng-app="todoApp">
 <head>
-    <title>AngularJS-2</title>
+    <title>AngularJS-2.2 Controller Demo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script src="application/todo.js"></script>
     <link rel="stylesheet" href="css/todo.css">
