--- a/Tutorial-04 AngularJS/AngularJS-1_Directives.html
+++ b/Tutorial-04 AngularJS/AngularJS-1_Directives.html
@@ -113,7 +113,7 @@
     </div>
     <h1>Directive 2</h1>
     <div ng-controller="Controller2">
-        <!-- ngClass give style name which defined in css file. -->
+        <!-- ngClass give style name which defined in style file. -->
         <p>Choose one style :
             <label ng-repeat="style in styles">
                 <input type="radio" name="cs" ng-model="$parent.selected" ng-value="style.name">{{style.name}}</input>
