--- a/Tutorial-04 AngularJS/AngularJS-2-2_Controller.html
+++ b/Tutorial-04 AngularJS/AngularJS-2-2_Controller.html
@@ -9,7 +9,7 @@
     <title>AngularJS-2.2 Controller Demo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script src="application/todo.js"></script>
-    <link rel="stylesheet" href="css/todo.css">
+    <link rel="stylesheet" href="style/todo.css">
 </head>
 <body>
 <h2>Todo</h2>
