--- a/Tutorial-00 JavaScript Language/Prototype/JS-Prototype_1.html
+++ b/Tutorial-00 JavaScript Language/Prototype/JS-Prototype_1.html
@@ -22,7 +22,7 @@
         }
     }
 
-    // Protected Method
+    // Prototype Method
     Person.prototype.Greet = function() {
         if (this.canTalk) {
             console.log('Hi, I am ' + this.name);
