--- a/Tutorial-06 WebGL/ThreeJS-1_Basics_Info_Structure.html
+++ b/Tutorial-06 WebGL/ThreeJS-1_Basics_Info_Structure.html
@@ -15,9 +15,9 @@
     </style>
     <script>
         $(document).ready( function() {
-            Step();
+            Initial();
         });
-        function Step() {
+        function Initial() {
             //4. Light up the world
             // Create Scene
             var scene = new THREE.Scene();
