--- a/Tutorial-07 ReactJS/ReactJS-1-Basics_event.html
+++ b/Tutorial-07 ReactJS/ReactJS-1-Basics_event.html
@@ -20,10 +20,12 @@
         var ClickCount = React.createClass({
             // Initial state object
             getInitialState: function() {
+                console.log("Initial states");
                 return {count: 0};
             },
             // Initial props object, it will be overridden when input the same props.
             getDefaultProps: function() {
+                console.log("Initial properties");
               return {title: "Hi", word:"No thing"};
             },
             // Setting click event
